<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        style="@style/edit_layout_bg"
        android:layout_marginTop="@dimen/layout_thirty"
        android:weightSum="3">

        <TextView
            style="@style/edit_style"
            android:layout_width="@dimen/layout_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/old_password"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edit_old_password"
            style="@style/edit_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/old_password_hint"
            android:inputType="textPassword"
            android:maxLength="18"
            android:paddingLeft="@dimen/layout_five"
            android:textCursorDrawable="@null"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/edit_layout_bg"
        android:layout_marginTop="@dimen/layout_thirty"
        android:weightSum="3">

        <TextView
            style="@style/edit_style"
            android:layout_width="@dimen/layout_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/new_password"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edit_new_password"
            style="@style/edit_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            android:maxLength="18"
            android:textCursorDrawable="@null"
            android:paddingLeft="@dimen/layout_five"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/edit_layout_bg"
        android:layout_marginTop="@dimen/layout_thirty"
        android:weightSum="3">

        <TextView
            style="@style/edit_style"
            android:layout_width="@dimen/layout_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/again_password"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edit_again_password"
            style="@style/edit_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/again_password_hint"
            android:inputType="textPassword"
            android:maxLength="18"
            android:textCursorDrawable="@null"
            android:paddingLeft="@dimen/layout_five"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_modify_pwd_confirm"
        style="@style/button_bg"
        android:layout_marginTop="@dimen/layout_thirty"
        android:text="@string/confirm" />

</LinearLayout>
