<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_fifty"
        android:gravity="center"
        android:text="@string/exit_login_pop_hint"
        android:textColor="@color/text_color_hint"
        android:textSize="@dimen/textsize_twelve" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_one_half"
        android:background="@drawable/login_line" />

    <TextView
        android:id="@+id/tv_pop_exit_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_fifty"
        android:gravity="center"
        android:background="@drawable/setting_item_bg_selector"
        android:text="@string/exit_login"
        android:textColor="@color/red" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_three"
        android:background="@drawable/login_line" />

    <TextView
        android:id="@+id/tv_pop_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_fifty"
        android:gravity="center"
        android:background="@drawable/setting_item_bg_selector"
        android:text="@string/cancel_text"
        android:textColor="@color/black" />

</LinearLayout>