<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chat_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/layout_twenty"
    android:paddingTop="@dimen/layout_twenty">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_one_half"
        android:background="@drawable/login_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_hundred"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_header"
            android:layout_width="@dimen/layout_eighty"
            android:layout_height="@dimen/layout_eighty"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/layout_twenty"
            android:src="@drawable/morentouxiang" />

        <TextView
            android:id="@+id/tv_personal_info_userid"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_header"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/layout_twenty"
            android:text="123456"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_twenty_five" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_one_half"
        android:background="@drawable/login_line" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_ten"
        android:background="@color/trans" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_one_half"
        android:background="@drawable/login_line" />


    <LinearLayout
        android:id="@+id/ll_info_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/layout_fifteen"
        android:weightSum="3">

        <TextView
            style="@style/friend_details_item_text"
            android:layout_width="@dimen/layout_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phone_number" />

        <TextView
            android:id="@+id/tv_info_phone_number"
            style="@style/friend_details_item_text"
            android:layout_width="@dimen/layout_zero"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="159 3521 4528" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_one_half"
        android:background="@drawable/login_line" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_ten"
        android:background="@color/trans" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_one_half"
        android:background="@drawable/login_line" />


    <LinearLayout
        android:id="@+id/ll_info_idcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/layout_fifteen"
        android:weightSum="3">

        <TextView
            style="@style/friend_details_item_text"
            android:layout_width="@dimen/layout_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/id_card" />

        <TextView
            android:id="@+id/tv_info_idcard_number"
            style="@style/friend_details_item_text"
            android:layout_width="@dimen/layout_zero"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="159 3521 4528" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_one_half"
        android:background="@drawable/login_line" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_ten"
        android:background="@color/trans" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_one_half"
        android:background="@drawable/login_line" />

    <TextView
        android:id="@+id/tv_info_update_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableRight="@drawable/next_arrow"
        android:gravity="center_vertical"
        android:padding="@dimen/layout_fifteen"
        android:text="@string/update_password"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_one_half"
        android:background="@drawable/login_line" />
</LinearLayout>
